@@ -1,18 +1,20 @@
 package io.yak.ops.business.datasource.service.impl;
 
-import com.baomidou.mybatisplus.core.metadata.IPage;
 import io.yak.framework.common.PagingData;
 import io.yak.ops.business.datasource.config.ConditionalOnDataSourceEnabled;
 import io.yak.ops.business.datasource.config.DataSourceProperties;
-import io.yak.ops.business.datasource.dao.DataSourceDao;
+import io.yak.ops.business.datasource.domain.DataSourceDefinition;
+import io.yak.ops.business.datasource.domain.DataSourcePage;
+import io.yak.ops.business.datasource.domain.DataSourceQuery;
 import io.yak.ops.business.datasource.exception.DataSourceException;
 import io.yak.ops.business.datasource.plugin.DataSourcePluginRegistry;
+import io.yak.ops.business.datasource.repository.DataSourceRepository;
 import io.yak.ops.business.datasource.service.DataSourceService;
+import io.yak.ops.business.datasource.service.support.DataSourceViewMapper;
 import io.yak.ops.business.datasource.util.DataSourceSecretCodec;
 import io.yak.ops.common.bean.dto.datasource.DataSourceConnectTestDTO;
 import io.yak.ops.common.bean.dto.datasource.DataSourceDTO;
 import io.yak.ops.common.bean.dto.datasource.DataSourceQueryDTO;
-import io.yak.ops.common.bean.po.datasource.DataSourcePO;
 import io.yak.ops.common.bean.vo.datasource.DataSourceOptionVO;
 import io.yak.ops.common.bean.vo.datasource.DataSourceSummaryVO;
 import io.yak.ops.common.bean.vo.datasource.DataSourceVO;
@@ -24,22 +26,22 @@ import io.yak.ops.spi.datasource.DataSourceConnection;
 import io.yak.ops.spi.datasource.DataSourcePlugin;
 import io.yak.ops.spi.datasource.DataSourcePluginException;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.StringUtils;
 
-/** 数据源管理服务实现。业务层只负责编排，连接能力由插件提供。 */
+/** 数据源管理服务实现。业务层只负责编排，持久化与展示转换由独立边界承担。 */
 @Service
 @ConditionalOnDataSourceEnabled
 @RequiredArgsConstructor
 public class DataSourceServiceImpl implements DataSourceService {
 
-  private final DataSourceDao dataSourceDao;
+  private final DataSourceRepository repository;
   private final DataSourcePluginRegistry pluginRegistry;
   private final DataSourceProperties properties;
   private final DataSourceSecretCodec secretCodec;
+  private final DataSourceViewMapper viewMapper;
 
   @Override
   @Transactional(
@@ -49,11 +51,12 @@ public class DataSourceServiceImpl implements DataSourceService {
     String name = normalizeName(dataSourceDTO.getName());
     ensureNameAvailable(name, null);
 
-    DataSourcePO dataSourcePO = buildDataSource(dataSourceDTO, dataSourceDTO.getConnectionParams());
-    dataSourcePO.setName(name);
-    dataSourcePO.setConnStatus(DataSourceConnStatus.UNKNOWN);
+    DataSourceDefinition definition =
+        buildDefinition(dataSourceDTO, dataSourceDTO.getConnectionParams());
+    definition.setName(name);
+    definition.setConnStatus(DataSourceConnStatus.UNKNOWN);
 
-    if (dataSourceDao.addDataSource(dataSourcePO) <= 0) {
+    if (!repository.insert(definition)) {
       throw new DataSourceException(DataSourceErrorCode.CREATE_FAILED);
     }
     return true;
@@ -64,7 +67,7 @@ public class DataSourceServiceImpl implements DataSourceService {
       transactionManager = "opsDataSourceTransactionManager",
       rollbackFor = Exception.class)
   public boolean updateDataSource(Long id, DataSourceDTO dataSourceDTO) {
-    DataSourcePO existing = getDataSourceOrThrow(id);
+    DataSourceDefinition existing = getDataSourceOrThrow(id);
     String name = normalizeName(dataSourceDTO.getName());
     ensureNameAvailable(name, id);
 
@@ -81,12 +84,13 @@ public class DataSourceServiceImpl implements DataSourceService {
             plugin,
             dataSourceDTO.getConnectionParams(),
             existing.getConnectionParams());
-    DataSourcePO dataSourcePO = buildDataSource(dataSourceDTO, mergedConnectionJson);
-    dataSourcePO.setId(id);
-    dataSourcePO.setName(name);
-    dataSourcePO.setConnStatus(DataSourceConnStatus.UNKNOWN);
+    DataSourceDefinition definition = buildDefinition(dataSourceDTO, mergedConnectionJson);
+    definition.setId(id);
+    definition.setName(name);
+    definition.setConnStatus(DataSourceConnStatus.UNKNOWN);
+    definition.setCreateTime(existing.getCreateTime());
 
-    if (dataSourceDao.editDataSource(dataSourcePO) <= 0) {
+    if (!repository.update(definition)) {
       throw new DataSourceException(DataSourceErrorCode.UPDATE_FAILED);
     }
     return true;
@@ -94,33 +98,29 @@ public class DataSourceServiceImpl implements DataSourceService {
 
   @Override
   public DataSourceVO getDataSource(Long id) {
-    return toVO(getDataSourceOrThrow(id), true);
+    return viewMapper.definition(getDataSourceOrThrow(id), true);
   }
 
   @Override
   public PagingData<DataSourceVO> getDataSourcePage(DataSourceQueryDTO queryDTO) {
-    normalizeQuery(queryDTO);
-    IPage<DataSourcePO> page = dataSourceDao.selectPage(queryDTO);
+    DataSourcePage<DataSourceDefinition> page = repository.page(toQuery(queryDTO));
     List<DataSourceVO> records =
-        page.getRecords().stream()
-            .map(dataSourcePO -> toVO(dataSourcePO, false))
-            .collect(Collectors.toList());
-    return new PagingData<>(records, page);
+        page.records().stream().map(value -> viewMapper.definition(value, false)).toList();
+    return pagingData(records, page.total(), page.pageNo(), page.pageSize(), page.pages());
   }
 
   @Override
   public DataSourceSummaryVO getSummary() {
-    DataSourceSummaryVO summary = dataSourceDao.selectSummary();
-    return summary == null ? new DataSourceSummaryVO() : summary;
+    return viewMapper.summary(repository.summary());
   }
 
   @Override
   public PagingData<DataSourceVO> getAllDataSources() {
     List<DataSourceVO> records =
-        dataSourceDao.selectAll(null).stream()
-            .map(dataSourcePO -> toVO(dataSourcePO, false))
-            .collect(Collectors.toList());
-    return pagingData(records, records.size(), 1, Math.max(1, records.size()));
+        repository.findAll(null).stream()
+            .map(value -> viewMapper.definition(value, false))
+            .toList();
+    return pagingData(records, records.size(), 1L, Math.max(1, records.size()), records.isEmpty() ? 0L : 1L);
   }
 
   @Override
@@ -129,7 +129,7 @@ public class DataSourceServiceImpl implements DataSourceService {
       rollbackFor = Exception.class)
   public boolean deleteDataSource(Long id) {
     getDataSourceOrThrow(id);
-    if (!dataSourceDao.deleteById(id)) {
+    if (!repository.delete(id)) {
       throw new DataSourceException(DataSourceErrorCode.DELETE_FAILED);
     }
     return true;
@@ -137,16 +137,16 @@ public class DataSourceServiceImpl implements DataSourceService {
 
   @Override
   public boolean testConnection(Long id) {
-    DataSourcePO dataSourcePO = getDataSourceOrThrow(id);
-    DataSourcePlugin plugin = pluginRegistry.get(dataSourcePO.getDbType());
-    DataSourceConnection connection = parseConnection(plugin, dataSourcePO.getConnectionParams());
+    DataSourceDefinition definition = getDataSourceOrThrow(id);
+    DataSourcePlugin plugin = pluginRegistry.get(definition.getDbType());
+    DataSourceConnection connection = parseConnection(plugin, definition.getConnectionParams());
 
     try {
       plugin.testConnection(connection, connectionTimeoutSeconds());
-      dataSourceDao.updateConnectionStatus(id, DataSourceConnStatus.CONNECTED);
+      repository.updateConnectionStatus(id, DataSourceConnStatus.CONNECTED);
       return true;
     } catch (RuntimeException exception) {
-      dataSourceDao.updateConnectionStatus(id, DataSourceConnStatus.DISCONNECTED);
+      repository.updateConnectionStatus(id, DataSourceConnStatus.DISCONNECTED);
       throw connectException(exception);
     }
   }
@@ -162,7 +162,7 @@ public class DataSourceServiceImpl implements DataSourceService {
     DataSourcePlugin plugin;
     String connectionJson = connectTestDTO.getConnJson();
     if (connectTestDTO.getDataSourceId() != null) {
-      DataSourcePO existing = getDataSourceOrThrow(connectTestDTO.getDataSourceId());
+      DataSourceDefinition existing = getDataSourceOrThrow(connectTestDTO.getDataSourceId());
       DataSourceDbType existingType = existing.getDbType();
       if (StringUtils.hasText(connectTestDTO.getDbType())
           && parseDbType(connectTestDTO.getDbType()) != existingType) {
@@ -195,19 +195,11 @@ public class DataSourceServiceImpl implements DataSourceService {
 
   @Override
   public List<DataSourceOptionVO> getOptions(String dbType) {
-    DataSourceDbType normalizedType =
-        StringUtils.hasText(dbType) ? parseDbType(dbType) : null;
-    return dataSourceDao.selectAll(normalizedType).stream()
-        .map(
-            dataSourcePO ->
-                new DataSourceOptionVO(
-                    dataSourcePO.getName(),
-                    String.valueOf(dataSourcePO.getId()),
-                    dataSourcePO.getDbType().name()))
-        .collect(Collectors.toList());
+    DataSourceDbType normalizedType = StringUtils.hasText(dbType) ? parseDbType(dbType) : null;
+    return repository.findAll(normalizedType).stream().map(viewMapper::option).toList();
   }
 
-  private DataSourcePO buildDataSource(
+  private DataSourceDefinition buildDefinition(
       DataSourceDTO dataSourceDTO,
       String connectionJson) {
     DataSourceDbType dbType = parseDbType(dataSourceDTO.getDbType());
@@ -215,14 +207,14 @@ public class DataSourceServiceImpl implements DataSourceService {
     DataSourcePlugin plugin = pluginRegistry.get(dbType);
     DataSourceConnection connection = parseConnection(plugin, connectionJson);
 
-    DataSourcePO dataSourcePO = new DataSourcePO();
-    dataSourcePO.setDbType(dbType);
-    dataSourcePO.setJdbcUrl(connection.jdbcUrl());
-    dataSourcePO.setEnvironment(environment);
-    dataSourcePO.setRemark(normalizeNullable(dataSourceDTO.getRemark()));
-    dataSourcePO.setConnectionParams(connection.normalizedJson());
-    dataSourcePO.setOriginalJson(connection.normalizedJson());
-    return dataSourcePO;
+    DataSourceDefinition definition = new DataSourceDefinition();
+    definition.setDbType(dbType);
+    definition.setJdbcUrl(connection.jdbcUrl());
+    definition.setEnvironment(environment);
+    definition.setRemark(normalizeNullable(dataSourceDTO.getRemark()));
+    definition.setConnectionParams(connection.normalizedJson());
+    definition.setOriginalJson(connection.normalizedJson());
+    return definition;
   }
 
   private DataSourceConnection parseConnection(DataSourcePlugin plugin, String connectionJson) {
@@ -242,8 +234,8 @@ public class DataSourceServiceImpl implements DataSourceService {
   }
 
   private DataSourceException connectException(RuntimeException exception) {
-    if (exception instanceof DataSourceException) {
-      return (DataSourceException) exception;
+    if (exception instanceof DataSourceException dataSourceException) {
+      return dataSourceException;
     }
     return new DataSourceException(
         DataSourceErrorCode.CONNECT_FAILED,
@@ -255,21 +247,38 @@ public class DataSourceServiceImpl implements DataSourceService {
     return Math.max(1, properties.getConnectionTest().getTimeoutSeconds());
   }
 
-  private DataSourcePO getDataSourceOrThrow(Long id) {
-    if (id == null || id <= 0) {
+  private DataSourceDefinition getDataSourceOrThrow(Long id) {
+    if (id == null || id <= 0L) {
       throw new DataSourceException(DataSourceErrorCode.NOT_FOUND);
     }
-    DataSourcePO dataSourcePO = dataSourceDao.selectById(id);
-    if (dataSourcePO == null) {
-      throw new DataSourceException(DataSourceErrorCode.NOT_FOUND);
-    }
-    return dataSourcePO;
+    return repository.findById(id)
+        .orElseThrow(() -> new DataSourceException(DataSourceErrorCode.NOT_FOUND));
   }
 
   private void ensureNameAvailable(String name, Long excludeId) {
-    if (dataSourceDao.existsByName(name, excludeId)) {
+    if (repository.existsByName(name, excludeId)) {
       throw new DataSourceException(DataSourceErrorCode.DUPLICATE_NAME);
     }
+  }
+
+  private DataSourceQuery toQuery(DataSourceQueryDTO queryDTO) {
+    if (queryDTO == null) {
+      throw new DataSourceException(
+          DataSourceErrorCode.INVALID_CONNECTION_PARAMS,
+          "分页查询参数不能为空");
+    }
+    return new DataSourceQuery(
+        queryDTO.getPageNo(),
+        queryDTO.getPageSize(),
+        normalizeNullable(queryDTO.getName()),
+        normalizeNullable(queryDTO.getKeyword()),
+        StringUtils.hasText(queryDTO.getDbType()) ? parseDbType(queryDTO.getDbType()) : null,
+        StringUtils.hasText(queryDTO.getEnvironment())
+            ? parseEnvironment(queryDTO.getEnvironment())
+            : null,
+        StringUtils.hasText(queryDTO.getConnStatus())
+            ? parseConnectionStatus(queryDTO.getConnStatus())
+            : null);
   }
 
   private String normalizeName(String name) {
@@ -283,29 +292,6 @@ public class DataSourceServiceImpl implements DataSourceService {
 
   private String normalizeNullable(String value) {
     return StringUtils.hasText(value) ? value.trim() : null;
-  }
-
-  private void normalizeQuery(DataSourceQueryDTO queryDTO) {
-    if (queryDTO == null) {
-      throw new DataSourceException(
-          DataSourceErrorCode.INVALID_CONNECTION_PARAMS,
-          "分页查询参数不能为空");
-    }
-    if (StringUtils.hasText(queryDTO.getName())) {
-      queryDTO.setName(queryDTO.getName().trim());
-    }
-    if (StringUtils.hasText(queryDTO.getKeyword())) {
-      queryDTO.setKeyword(queryDTO.getKeyword().trim());
-    }
-    if (StringUtils.hasText(queryDTO.getDbType())) {
-      queryDTO.setDbType(parseDbType(queryDTO.getDbType()).name());
-    }
-    if (StringUtils.hasText(queryDTO.getEnvironment())) {
-      queryDTO.setEnvironment(parseEnvironment(queryDTO.getEnvironment()).name());
-    }
-    if (StringUtils.hasText(queryDTO.getConnStatus())) {
-      queryDTO.setConnStatus(parseConnectionStatus(queryDTO.getConnStatus()).name());
-    }
   }
 
   private DataSourceDbType parseDbType(String value) {
@@ -341,32 +327,12 @@ public class DataSourceServiceImpl implements DataSourceService {
     }
   }
 
-  private DataSourceVO toVO(DataSourcePO dataSourcePO, boolean includeOriginalJson) {
-    DataSourceVO dataSourceVO = new DataSourceVO();
-    dataSourceVO.setId(dataSourcePO.getId());
-    dataSourceVO.setName(dataSourcePO.getName());
-    dataSourceVO.setDbType(dataSourcePO.getDbType().name());
-    dataSourceVO.setJdbcUrl(secretCodec.maskSensitiveText(dataSourcePO.getJdbcUrl()));
-    dataSourceVO.setEnvironment(dataSourcePO.getEnvironment().name());
-    dataSourceVO.setEnvironmentName(dataSourcePO.getEnvironment().getDisplayName());
-    dataSourceVO.setConnStatus(dataSourcePO.getConnStatus().name());
-    dataSourceVO.setRemark(dataSourcePO.getRemark());
-    dataSourceVO.setCreateTime(dataSourcePO.getCreateTime());
-    dataSourceVO.setUpdateTime(dataSourcePO.getUpdateTime());
-    if (includeOriginalJson) {
-      DataSourcePlugin plugin = pluginRegistry.get(dataSourcePO.getDbType());
-      dataSourceVO.setOriginalJson(
-          secretCodec.maskConnectionJson(plugin, dataSourcePO.getOriginalJson()));
-    }
-    return dataSourceVO;
-  }
-
   private PagingData<DataSourceVO> pagingData(
       List<DataSourceVO> records,
       long total,
-      int pageNo,
-      int pageSize) {
-    long pages = pageSize <= 0 ? 0 : (total + pageSize - 1) / pageSize;
+      long pageNo,
+      long pageSize,
+      long pages) {
     PagingData<DataSourceVO> pagingData = new PagingData<>();
     pagingData.setBizData(records);
     pagingData.setPagination(
